# solana-stablecoin-standard

./: .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  docker-compose.yml
app/: Dockerfile  next.config.ts  package.json
app/app/: layout.tsx
app/app/dashboard/: page.tsx
app/components/: CompliancePanel.tsx  MintSelect.tsx  MintersPanel.tsx  OverviewPanel.tsx  ProposalsPanel.tsx  WalletProvider.tsx
app/lib/: api.ts  hooks.ts
backend/: Dockerfile  package.json
backend/prisma/: seed.ts
backend/src/: config.ts  server.ts
backend/src/db/: schema.prisma
backend/src/plugins/: auth.ts  errors.ts  requestId.ts
backend/src/services/: indexer.ts  notifier.ts
cli/: package.json
cli/src/: index.ts  util.ts
cli/src/commands/: authority.ts  compliance.ts  freeze.ts  issue.ts  issue_cmd.ts  proposal.ts  retire_cmd.ts  roles.ts  status.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  SDK.md  SSS-1.md  SSS-2.md  SSS-3.md
modules/sss-events/: Cargo.toml
modules/sss-events/src/: lib.rs
programs/sss-core/: Cargo.toml
programs/sss-core/src/: constants.rs  lib.rs  state.rs
programs/sss-core/src/instructions/: assign_role.rs  confiscate.rs  cosign_mint.rs  halt.rs  handover.rs  initialize.rs  issue.rs  lock.rs  register_minter.rs  retire.rs  revoke_minter.rs  set_window.rs
programs/sss-hook/: Cargo.toml
programs/sss-hook/src/: lib.rs
sdk/: package.json  tsconfig.json
sdk/src/: compliant.ts  constants.ts  factory.ts  index.ts  issuer.ts  pda.ts  types.ts
sdk/tests/: index.test.ts
tests/: access_control.ts  helpers.ts  tier1.ts  tier2.ts  tier3.ts
trident-tests/: Cargo.toml
tui/: package.json
tui/src/: app.tsx
tui/src/components/: StatusBar.tsx
tui/src/screens/: Compliance.tsx  Minters.tsx  Overview.tsx  Proposals.tsx
(+3 files in other folders)
