[package]
name    = "sss-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "sss_core"

[features]
default  = ["cpi"]
no-entrypoint = []
no-idl   = []
no-log-ix-name = []
cpi      = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang   = { workspace = true }
anchor-spl    = { workspace = true }
spl-token-2022 = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
sss-events    = { workspace = true }
solana-program = "2.3.0"
